{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 18,
  "lineage": "8f898888-0db9-b6a4-7d8a-1cab30536e0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168453267:internet-gateway/igw-07c2f2ea3f3e92fd0",
            "id": "igw-07c2f2ea3f3e92fd0",
            "owner_id": "640168453267",
            "tags": {
              "Name": "csye6225-igw"
            },
            "tags_all": {
              "Name": "csye6225-igw"
            },
            "vpc_id": "vpc-0bd5a65008479f389"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07c2f2ea3f3e92fd0",
            "id": "r-rtb-0dd26ec75c9f7f62a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd26ec75c9f7f62a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168453267:route-table/rtb-047268e62e1827453",
            "id": "rtb-047268e62e1827453",
            "owner_id": "640168453267",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "csye6225-private-route-table"
            },
            "tags_all": {
              "Name": "csye6225-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd5a65008479f389"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168453267:route-table/rtb-0dd26ec75c9f7f62a",
            "id": "rtb-0dd26ec75c9f7f62a",
            "owner_id": "640168453267",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "csye6225-public-route-table"
            },
            "tags_all": {
              "Name": "csye6225-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd5a65008479f389"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f86655ed6982945b",
            "route_table_id": "rtb-047268e62e1827453",
            "subnet_id": "subnet-08b19bebcc49ac84f"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdb9aaf467d16dd9",
            "route_table_id": "rtb-047268e62e1827453",
            "subnet_id": "subnet-0084c786485a8b65e"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c377065390213d9f",
            "route_table_id": "rtb-047268e62e1827453",
            "subnet_id": "subnet-09339ceabeb0fd3c3"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1fc27cf0c8904f7",
            "route_table_id": "rtb-0dd26ec75c9f7f62a",
            "subnet_id": "subnet-068d385b379a0f690"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6b62930a04a3fee",
            "route_table_id": "rtb-0dd26ec75c9f7f62a",
            "subnet_id": "subnet-0be3248a04c6e1c85"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0350e2104b9b87a4c",
            "route_table_id": "rtb-0dd26ec75c9f7f62a",
            "subnet_id": "subnet-0ebfcee01dda3fdf7"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168453267:subnet/subnet-08b19bebcc49ac84f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b19bebcc49ac84f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640168453267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csye6225-private-subnet-1"
            },
            "tags_all": {
              "Name": "csye6225-private-subnet-1"
            },
            "vpc_id": "vpc-0bd5a65008479f389"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168453267:subnet/subnet-0084c786485a8b65e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0084c786485a8b65e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640168453267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csye6225-private-subnet-2"
            },
            "tags_all": {
              "Name": "csye6225-private-subnet-2"
            },
            "vpc_id": "vpc-0bd5a65008479f389"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168453267:subnet/subnet-09339ceabeb0fd3c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09339ceabeb0fd3c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640168453267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csye6225-private-subnet-3"
            },
            "tags_all": {
              "Name": "csye6225-private-subnet-3"
            },
            "vpc_id": "vpc-0bd5a65008479f389"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168453267:subnet/subnet-068d385b379a0f690",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068d385b379a0f690",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640168453267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csye6225-public-subnet-1"
            },
            "tags_all": {
              "Name": "csye6225-public-subnet-1"
            },
            "vpc_id": "vpc-0bd5a65008479f389"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168453267:subnet/subnet-0be3248a04c6e1c85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be3248a04c6e1c85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640168453267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csye6225-public-subnet-2"
            },
            "tags_all": {
              "Name": "csye6225-public-subnet-2"
            },
            "vpc_id": "vpc-0bd5a65008479f389"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168453267:subnet/subnet-0ebfcee01dda3fdf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebfcee01dda3fdf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640168453267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "csye6225-public-subnet-3"
            },
            "tags_all": {
              "Name": "csye6225-public-subnet-3"
            },
            "vpc_id": "vpc-0bd5a65008479f389"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168453267:vpc/vpc-0bd5a65008479f389",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0bd87205c83bf8a",
            "default_route_table_id": "rtb-0230792530cae29e7",
            "default_security_group_id": "sg-0d4154fc54ba57849",
            "dhcp_options_id": "dopt-0cc90096858f37439",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bd5a65008479f389",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0230792530cae29e7",
            "owner_id": "640168453267",
            "tags": {
              "Name": "csye6225-vpc"
            },
            "tags_all": {
              "Name": "csye6225-vpc"
            }
          }
        }
      ]
    }
  ]
}